2007-11-05  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/linkbutton.ccg:
	* gtk/src/linkbutton.hg: Partially hand-code one of the 
	constructors, so it can pass the uri for the label too, 
	as in gtk_link_button_new(). Bug #492200 (Marko Anastasov).

2007-11-04  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/widget.hg: Change a Style to Gtk::Style in 
	a signal, to fix the build on MacOS X. Bug #493057.
	(Alberto Ruiz)
	* tools/m4/convert_gtk.m4:
	* gtk/src/style.hg: Moved some signal-specific conversions to 
	the .hg file, to avoid their misuse.

2007-10-25  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/iconview.hg: set_cursor(): Actually implement this.

This is the gtkmm-2-12 branch. See the svn trunk branch for gtkmm 2.13/14.

2007-10-14  Marko Anastasov  <marko@marko.anastasov.name>

	* gdk/src/pixbuf.hg: Fixed build by correcting a typo for create()
	from previous commit. Bug #486257 (Craig Keogh).

2007-10-12  Armin Burgmeier  <armin@openismus.com>

	* gdk/gdkmmconfig.h.in:
	* gtk/gtkmmconfig.h.in:
	* configure.in: Added G{D,T}KMM_DISABLE_DEPRECATED defines to
	g{d,t}kmmconfig.h so other code can check whether deprecated API is
	available or not.

	* gdk/src/pixbuf.hg:
	* gdk/src/pixbuf.ccg: Fixed build with deprecated API disabled.

	* gtk/src/tooltips.hg:
	* gtk/src/combo.hg:
	* gtk/src/textview.hg:
	* gtk/src/optionmenu.hg:
	* gtk/src/toolbar.hg:
	* gtk/src/inputdialog.hg:
	* gtk/src/treeview.hg:
	* gtk/src/style.hg:
	* gtk/src/toolitem.hg:
	* gtk/src/textbuffer.hg:
	* gtk/src/treepath.hg:
	* gtk/src/treesortable.hg:
	* gtk/src/progress.hg:
	* gtk/src/treeviewcolumn.hg:
	* gtk/src/fileselection.hg:
	* gdk/src/colormap.hg:
	* gdk/src/color.hg: Use the new _CONFIGINCLUDE m4 macro in glibmm to
	include gtkmmconfig.h before the #ifdef GTKMM_DISABLE_DEPRECATED at
	the top of the file so that the define is actually present when other
	code includes one of these files directly. Note this requires glibmm